--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -8,8 +8,30 @@
 <body>
 <h1>My Super Fancy Spa</h1>
 <div id = "clientProfile">
+    <h2>My Profile</h2>
+    <p th:text="${name}">name</p>
+    <p th:text="${skintype}">skin</p>
+    <p th:text="${manipedi}">don't touch me</p>
 </div>
 <div id = "servicesMenu">
+    <h2>Facial Treatments</h2>
+    <table>
+    <th:block th:each="facial : ${appropriateFacials}">
+        <tr>
+            <td><p th:text="${facial}">Facial type</p></td>
+        </tr>
+    </th:block>
+    </table>
+
+    <div th:if='${manipedi.equals("manicure")}'>
+        <h3>Chose your manicure</h3>
+        <p th:replace="fragments :: manicureDescription"></p>
+    </div>
+
+    <div th:if='${manipedi.equals("pedicure")}'>
+    <h3>Chose your pedicure</h3>
+    <p th:replace="fragments :: pedicureDescription"></p>
+    </div>
 </div>
 </body>
 </html>
